<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Cipher">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/chiffer"
            android:id="@+id/chiffer_et"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnDecrypt"
            android:id="@+id/btnDecrypt"
            android:layout_gravity="bottom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnTryDecrypt"
            android:id="@+id/btnTryDecrypt"
            android:visibility="gone"
            android:layout_gravity="bottom"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnSentC"
            android:id="@+id/btnSendCipher"
            android:layout_gravity="bottom"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnRcvC"
            android:id="@+id/btnRcvCipher"
            android:layout_gravity="bottom"/>

    </LinearLayout>

</FrameLayout>